[package]
name          = "queen-core"
version       = "0.1.0"
license       = "MIT"
authors       = ["mitum <dangcheng@hotmail.com>"]
description   = "server"
documentation = "https://docs.rs/queen-core"
homepage      = "https://github.com/mitum/queen-core"
repository    = "https://github.com/mitum/queen-core"
readme        = "README.md"
keywords      = ["server", "rpc"]
exclude       = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]

[dependencies]
nson = "0.1"
byteorder = "1.1"
queen-io = "0.1"
bitflags = "1.0"
